--- a/Practice-1.html
+++ b/Practice-1.html
@@ -1,10 +1,14 @@
 
 <!doctype>
+
 <html>
-<head>
-<title>This is my first practice</title>
-</head>
-<body>
-<h1>Hello javed</h1>
-</body>
+  <head>
+    <title>
+      This is my first practice
+    </title>
+  </head>
+  <body>
+    <h1>Hello javed</h1>
+  </body>
 </html>
+
