--- a/Practice-1.html
+++ b/Practice-1.html
@@ -8,6 +8,9 @@
     </title>
   </head>
   <body>
+    <p>
+      This is paragraph. And it is for User.
+    </p>
     <h1>Hello javed</h1>
   </body>
 </html>
